fix footer text alignment

--- a/themes/tartan/static/css/main.css
+++ b/themes/tartan/static/css/main.css
@@ -198,6 +198,11 @@ body {
   padding: 0;
 }
 
+#footer ul li {
+  width: 100%;
+  text-align: center;
+}
+
 #footer ul li:before {
   content: none;
 }
